// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NumberStepper > renders correctly at maximum value 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 48px;
  padding: 0 12px;
  border-radius: 100px;
  gap: 0;
}

.c2 {
  position: relative;
  width: 44px;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: visible;
  cursor: text;
  border-radius: 4px;
}

.c2:focus-within {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.33;
  color: #292924;
  pointer-events: none;
  user-select: none;
  z-index: 1;
}

.stepper--increment .c3 {
  animation: ijuAJy 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--decrement .c3 {
  animation: jfzBPv 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--increment-boundary .c3 {
  animation: irMnix 416ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--decrement-boundary .c3 {
  animation: eETuUV 416ms cubic-bezier(0.3, 0, 0, 1);
}

.c1 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 48px;
  padding: 0;
  border: none;
  background: transparent;
  cursor: pointer;
  flex-shrink: 0;
  position: relative;
}

.c1::before {
  content: '';
  position: absolute;
  width: 32px;
  height: 32px;
  border-radius: 1000px;
  background: #dad2c4;
  transition: background 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.c1:hover:not(:disabled)::before {
  background: #beb4a0;
}

.c1:active:not(:disabled)::before {
  background: #9d927b;
}

.c1:focus-visible {
  outline: 2px solid #0e0e0c;
  outline-offset: 2px;
}

.c1:disabled {
  pointer-events: none;
}

.c1 svg {
  position: relative;
  z-index: 1;
  width: 14px;
  height: 14px;
  color: #292924;
  transition: color 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.stepper--decrement-boundary .c1.stepper-button--decrement svg {
  animation: jmypMo 333ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--increment-boundary .c1.stepper-button--increment svg {
  animation: qkTPx 333ms cubic-bezier(0.3, 0, 0, 1);
}

.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 48px;
  padding: 0;
  border: none;
  background: transparent;
  cursor: not-allowed;
  flex-shrink: 0;
  position: relative;
}

.c5::before {
  content: '';
  position: absolute;
  width: 32px;
  height: 32px;
  border-radius: 1000px;
  background: transparent;
  transition: background 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.c5:hover:not(:disabled)::before {
  background: #beb4a0;
}

.c5:active:not(:disabled)::before {
  background: #9d927b;
}

.c5:focus-visible {
  outline: 2px solid #0e0e0c;
  outline-offset: 2px;
}

.c5:disabled {
  pointer-events: none;
}

.c5 svg {
  position: relative;
  z-index: 1;
  width: 14px;
  height: 14px;
  color: #d2d2d2;
  transition: color 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.stepper--decrement-boundary .c5.stepper-button--decrement svg {
  animation: jmypMo 333ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--increment-boundary .c5.stepper-button--increment svg {
  animation: qkTPx 333ms cubic-bezier(0.3, 0, 0, 1);
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: none;
  background: transparent;
  outline: none!important;
  padding: 0;
  text-align: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  cursor: text;
  z-index: 2;
  color: transparent;
  caret-color: #292924;
}

.c4:focus,
.c4:focus-visible {
  outline: none!important;
  box-shadow: none!important;
}

<div>
  <div
    aria-label="Number stepper"
    class="c0"
    role="group"
  >
    <button
      aria-hidden="true"
      class="c1 stepper-button--decrement"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-minus"
        data-icon="minus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        10
      </div>
      <input
        aria-label="Number input, minimum 0, maximum 10"
        aria-valuemax="10"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c4"
        inputmode="numeric"
        role="spinbutton"
        type="text"
        value="10"
      />
    </div>
    <button
      aria-hidden="true"
      class="c5 stepper-button--increment"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-plus"
        data-icon="plus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`NumberStepper > renders correctly at minimum value 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 48px;
  padding: 0 12px;
  border-radius: 100px;
  gap: 0;
}

.c2 {
  position: relative;
  width: 44px;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: visible;
  cursor: text;
  border-radius: 4px;
}

.c2:focus-within {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.33;
  color: #292924;
  pointer-events: none;
  user-select: none;
  z-index: 1;
}

.stepper--increment .c3 {
  animation: ijuAJy 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--decrement .c3 {
  animation: jfzBPv 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--increment-boundary .c3 {
  animation: irMnix 416ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--decrement-boundary .c3 {
  animation: eETuUV 416ms cubic-bezier(0.3, 0, 0, 1);
}

.c1 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 48px;
  padding: 0;
  border: none;
  background: transparent;
  cursor: not-allowed;
  flex-shrink: 0;
  position: relative;
}

.c1::before {
  content: '';
  position: absolute;
  width: 32px;
  height: 32px;
  border-radius: 1000px;
  background: transparent;
  transition: background 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.c1:hover:not(:disabled)::before {
  background: #beb4a0;
}

.c1:active:not(:disabled)::before {
  background: #9d927b;
}

.c1:focus-visible {
  outline: 2px solid #0e0e0c;
  outline-offset: 2px;
}

.c1:disabled {
  pointer-events: none;
}

.c1 svg {
  position: relative;
  z-index: 1;
  width: 14px;
  height: 14px;
  color: #d2d2d2;
  transition: color 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.stepper--decrement-boundary .c1.stepper-button--decrement svg {
  animation: jmypMo 333ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--increment-boundary .c1.stepper-button--increment svg {
  animation: qkTPx 333ms cubic-bezier(0.3, 0, 0, 1);
}

.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 48px;
  padding: 0;
  border: none;
  background: transparent;
  cursor: pointer;
  flex-shrink: 0;
  position: relative;
}

.c5::before {
  content: '';
  position: absolute;
  width: 32px;
  height: 32px;
  border-radius: 1000px;
  background: #dad2c4;
  transition: background 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.c5:hover:not(:disabled)::before {
  background: #beb4a0;
}

.c5:active:not(:disabled)::before {
  background: #9d927b;
}

.c5:focus-visible {
  outline: 2px solid #0e0e0c;
  outline-offset: 2px;
}

.c5:disabled {
  pointer-events: none;
}

.c5 svg {
  position: relative;
  z-index: 1;
  width: 14px;
  height: 14px;
  color: #292924;
  transition: color 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.stepper--decrement-boundary .c5.stepper-button--decrement svg {
  animation: jmypMo 333ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--increment-boundary .c5.stepper-button--increment svg {
  animation: qkTPx 333ms cubic-bezier(0.3, 0, 0, 1);
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: none;
  background: transparent;
  outline: none!important;
  padding: 0;
  text-align: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  cursor: text;
  z-index: 2;
  color: transparent;
  caret-color: #292924;
}

.c4:focus,
.c4:focus-visible {
  outline: none!important;
  box-shadow: none!important;
}

<div>
  <div
    aria-label="Number stepper"
    class="c0"
    role="group"
  >
    <button
      aria-hidden="true"
      class="c1 stepper-button--decrement"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-minus"
        data-icon="minus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        0
      </div>
      <input
        aria-label="Number input, minimum 0, maximum 10"
        aria-valuemax="10"
        aria-valuemin="0"
        aria-valuenow="0"
        class="c4"
        inputmode="numeric"
        role="spinbutton"
        type="text"
        value="0"
      />
    </div>
    <button
      aria-hidden="true"
      class="c5 stepper-button--increment"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-plus"
        data-icon="plus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`NumberStepper > renders correctly when disabled 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 48px;
  padding: 0 12px;
  border-radius: 100px;
  gap: 0;
}

.c2 {
  position: relative;
  width: 44px;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: visible;
  cursor: text;
  border-radius: 4px;
}

.c2:focus-within {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.33;
  color: #d2d2d2;
  pointer-events: none;
  user-select: none;
  z-index: 1;
}

.stepper--increment .c3 {
  animation: ijuAJy 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--decrement .c3 {
  animation: jfzBPv 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--increment-boundary .c3 {
  animation: irMnix 416ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--decrement-boundary .c3 {
  animation: eETuUV 416ms cubic-bezier(0.3, 0, 0, 1);
}

.c1 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 48px;
  padding: 0;
  border: none;
  background: transparent;
  cursor: not-allowed;
  flex-shrink: 0;
  position: relative;
}

.c1::before {
  content: '';
  position: absolute;
  width: 32px;
  height: 32px;
  border-radius: 1000px;
  background: transparent;
  transition: background 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.c1:hover:not(:disabled)::before {
  background: #beb4a0;
}

.c1:active:not(:disabled)::before {
  background: #9d927b;
}

.c1:focus-visible {
  outline: 2px solid #0e0e0c;
  outline-offset: 2px;
}

.c1:disabled {
  pointer-events: none;
}

.c1 svg {
  position: relative;
  z-index: 1;
  width: 14px;
  height: 14px;
  color: #d2d2d2;
  transition: color 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.stepper--decrement-boundary .c1.stepper-button--decrement svg {
  animation: jmypMo 333ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--increment-boundary .c1.stepper-button--increment svg {
  animation: qkTPx 333ms cubic-bezier(0.3, 0, 0, 1);
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: none;
  background: transparent;
  outline: none!important;
  padding: 0;
  text-align: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  cursor: not-allowed;
  z-index: 2;
  color: transparent;
  caret-color: #292924;
}

.c4:focus,
.c4:focus-visible {
  outline: none!important;
  box-shadow: none!important;
}

<div>
  <div
    aria-label="Number stepper"
    class="c0"
    role="group"
  >
    <button
      aria-hidden="true"
      class="c1 stepper-button--decrement"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-minus"
        data-icon="minus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        5
      </div>
      <input
        aria-label="Number input, minimum 0, maximum 10"
        aria-valuemax="10"
        aria-valuemin="0"
        aria-valuenow="5"
        class="c4"
        disabled=""
        inputmode="numeric"
        role="spinbutton"
        type="text"
        value="5"
      />
    </div>
    <button
      aria-hidden="true"
      class="c1 stepper-button--increment"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-plus"
        data-icon="plus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`NumberStepper > renders correctly with default props 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 48px;
  padding: 0 12px;
  border-radius: 100px;
  gap: 0;
}

.c2 {
  position: relative;
  width: 44px;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: visible;
  cursor: text;
  border-radius: 4px;
}

.c2:focus-within {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.33;
  color: #292924;
  pointer-events: none;
  user-select: none;
  z-index: 1;
}

.stepper--increment .c3 {
  animation: ijuAJy 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--decrement .c3 {
  animation: jfzBPv 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--increment-boundary .c3 {
  animation: irMnix 416ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--decrement-boundary .c3 {
  animation: eETuUV 416ms cubic-bezier(0.3, 0, 0, 1);
}

.c1 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 48px;
  padding: 0;
  border: none;
  background: transparent;
  cursor: pointer;
  flex-shrink: 0;
  position: relative;
}

.c1::before {
  content: '';
  position: absolute;
  width: 32px;
  height: 32px;
  border-radius: 1000px;
  background: #dad2c4;
  transition: background 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.c1:hover:not(:disabled)::before {
  background: #beb4a0;
}

.c1:active:not(:disabled)::before {
  background: #9d927b;
}

.c1:focus-visible {
  outline: 2px solid #0e0e0c;
  outline-offset: 2px;
}

.c1:disabled {
  pointer-events: none;
}

.c1 svg {
  position: relative;
  z-index: 1;
  width: 14px;
  height: 14px;
  color: #292924;
  transition: color 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.stepper--decrement-boundary .c1.stepper-button--decrement svg {
  animation: jmypMo 333ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--increment-boundary .c1.stepper-button--increment svg {
  animation: qkTPx 333ms cubic-bezier(0.3, 0, 0, 1);
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: none;
  background: transparent;
  outline: none!important;
  padding: 0;
  text-align: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  cursor: text;
  z-index: 2;
  color: transparent;
  caret-color: #292924;
}

.c4:focus,
.c4:focus-visible {
  outline: none!important;
  box-shadow: none!important;
}

<div>
  <div
    aria-label="Number stepper"
    class="c0"
    role="group"
  >
    <button
      aria-hidden="true"
      class="c1 stepper-button--decrement"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-minus"
        data-icon="minus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        5
      </div>
      <input
        aria-label="Number input, minimum 0, maximum 10"
        aria-valuemax="10"
        aria-valuemin="0"
        aria-valuenow="5"
        class="c4"
        inputmode="numeric"
        role="spinbutton"
        type="text"
        value="5"
      />
    </div>
    <button
      aria-hidden="true"
      class="c1 stepper-button--increment"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-plus"
        data-icon="plus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`NumberStepper > renders with label and id 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 48px;
  padding: 0 12px;
  border-radius: 100px;
  gap: 0;
}

.c3 {
  position: relative;
  width: 44px;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: visible;
  cursor: text;
  border-radius: 4px;
}

.c3:focus-within {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.33;
  color: #292924;
  pointer-events: none;
  user-select: none;
  z-index: 1;
}

.stepper--increment .c4 {
  animation: ijuAJy 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--decrement .c4 {
  animation: jfzBPv 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--increment-boundary .c4 {
  animation: irMnix 416ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--decrement-boundary .c4 {
  animation: eETuUV 416ms cubic-bezier(0.3, 0, 0, 1);
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 48px;
  padding: 0;
  border: none;
  background: transparent;
  cursor: pointer;
  flex-shrink: 0;
  position: relative;
}

.c2::before {
  content: '';
  position: absolute;
  width: 32px;
  height: 32px;
  border-radius: 1000px;
  background: #dad2c4;
  transition: background 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.c2:hover:not(:disabled)::before {
  background: #beb4a0;
}

.c2:active:not(:disabled)::before {
  background: #9d927b;
}

.c2:focus-visible {
  outline: 2px solid #0e0e0c;
  outline-offset: 2px;
}

.c2:disabled {
  pointer-events: none;
}

.c2 svg {
  position: relative;
  z-index: 1;
  width: 14px;
  height: 14px;
  color: #292924;
  transition: color 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.stepper--decrement-boundary .c2.stepper-button--decrement svg {
  animation: jmypMo 333ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--increment-boundary .c2.stepper-button--increment svg {
  animation: qkTPx 333ms cubic-bezier(0.3, 0, 0, 1);
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: none;
  background: transparent;
  outline: none!important;
  padding: 0;
  text-align: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  cursor: text;
  z-index: 2;
  color: transparent;
  caret-color: #292924;
}

.c5:focus,
.c5:focus-visible {
  outline: none!important;
  box-shadow: none!important;
}

.c1 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

<div>
  <div
    aria-label="Number stepper"
    class="c0"
    role="group"
  >
    <label
      class="c1"
      for="quantity-stepper"
    >
      Quantity
    </label>
    <button
      aria-hidden="true"
      class="c2 stepper-button--decrement"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-minus"
        data-icon="minus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        5
      </div>
      <input
        aria-label="Quantity"
        aria-valuemax="10"
        aria-valuemin="0"
        aria-valuenow="5"
        class="c5"
        id="quantity-stepper"
        inputmode="numeric"
        role="spinbutton"
        type="text"
        value="5"
      />
    </div>
    <button
      aria-hidden="true"
      class="c2 stepper-button--increment"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-plus"
        data-icon="plus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`NumberStepper > renders with margin props 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 48px;
  padding: 0 12px;
  border-radius: 100px;
  gap: 0;
}

.c2 {
  position: relative;
  width: 44px;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: visible;
  cursor: text;
  border-radius: 4px;
}

.c2:focus-within {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.33;
  color: #292924;
  pointer-events: none;
  user-select: none;
  z-index: 1;
}

.stepper--increment .c3 {
  animation: ijuAJy 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--decrement .c3 {
  animation: jfzBPv 250ms cubic-bezier(0, 0, 0, 1);
}

.stepper--increment-boundary .c3 {
  animation: irMnix 416ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--decrement-boundary .c3 {
  animation: eETuUV 416ms cubic-bezier(0.3, 0, 0, 1);
}

.c1 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 48px;
  padding: 0;
  border: none;
  background: transparent;
  cursor: pointer;
  flex-shrink: 0;
  position: relative;
}

.c1::before {
  content: '';
  position: absolute;
  width: 32px;
  height: 32px;
  border-radius: 1000px;
  background: #dad2c4;
  transition: background 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.c1:hover:not(:disabled)::before {
  background: #beb4a0;
}

.c1:active:not(:disabled)::before {
  background: #9d927b;
}

.c1:focus-visible {
  outline: 2px solid #0e0e0c;
  outline-offset: 2px;
}

.c1:disabled {
  pointer-events: none;
}

.c1 svg {
  position: relative;
  z-index: 1;
  width: 14px;
  height: 14px;
  color: #292924;
  transition: color 167ms cubic-bezier(0.3, 0, 0.7, 1);
}

.stepper--decrement-boundary .c1.stepper-button--decrement svg {
  animation: jmypMo 333ms cubic-bezier(0.3, 0, 0, 1);
}

.stepper--increment-boundary .c1.stepper-button--increment svg {
  animation: qkTPx 333ms cubic-bezier(0.3, 0, 0, 1);
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: none;
  background: transparent;
  outline: none!important;
  padding: 0;
  text-align: center;
  font-family: 'CircularXX',sans-serif;
  font-weight: 500;
  font-size: 16px;
  cursor: text;
  z-index: 2;
  color: transparent;
  caret-color: #292924;
}

.c4:focus,
.c4:focus-visible {
  outline: none!important;
  box-shadow: none!important;
}

@media (min-width: 0px) {
  .c0 {
    margin-top: 16px;
  }
}

@media (min-width: 0px) {
  .c0 {
    margin-bottom: 8px;
  }
}

<div>
  <div
    aria-label="Number stepper"
    class="c0"
    role="group"
  >
    <button
      aria-hidden="true"
      class="c1 stepper-button--decrement"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-minus"
        data-icon="minus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        5
      </div>
      <input
        aria-label="Number input, minimum 0, maximum 10"
        aria-valuemax="10"
        aria-valuemin="0"
        aria-valuenow="5"
        class="c4"
        inputmode="numeric"
        role="spinbutton"
        type="text"
        value="5"
      />
    </div>
    <button
      aria-hidden="true"
      class="c1 stepper-button--increment"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-plus"
        data-icon="plus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;
